코드는 다..수정해놓음 디비가 연결이..?